Finished the GUI for the dirpanel and filepanel

--- a/src/WFM/.gitignore
+++ b/src/WFM/.gitignore
@@ -15,3 +15,5 @@
 /FilePanel.class
 /FileNode.class
 /FileManagerFrame$TreeSL.class
+/FileManagerFrame$DirTreeSL.class
+/FileManagerFrame$FileTreeSL.class
