--- a/src/WFM/.gitignore
+++ b/src/WFM/.gitignore
@@ -18,3 +18,6 @@
 /FileManagerFrame$DirTreeSL.class
 /FileManagerFrame$FileTreeSL.class
 /App$DropDownAL.class
+/FancyFileNode.class
+/App$1.class
+/App$2.class
