--- a/src/WFM/.gitignore
+++ b/src/WFM/.gitignore
@@ -21,3 +21,20 @@
 /FancyFileNode.class
 /App$1.class
 /App$2.class
+/FileManagerFrame$1.class
+/App$3.class
+/App$4.class
+/App$5.class
+/renameDLG.class
+/renameDlg.class
+/dataDlg.class
+/dataDlg$1.class
+/dataDlg$2.class
+/dltDlg.class
+/dltDlg$1.class
+/dltDlg$2.class
+/FileManagerFrame$1$1.class
+/FileManagerFrame$1$2.class
+/FileManagerFrame$1$3.class
+/FileManagerFrame$1$4.class
+/MyDropTarget.class
