--- a/src/WFM/.gitignore
+++ b/src/WFM/.gitignore
@@ -38,3 +38,10 @@
 /FileManagerFrame$1$3.class
 /FileManagerFrame$1$4.class
 /MyDropTarget.class
+/App$MyDropTarget.class
+/FileManagerFrame$MyDropTarget.class
+/App$6.class
+/App$7.class
+/App$8.class
+/App$10.class
+/App$9.class
